// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component render desktop version 1`] = `
"<header className=\\"header\\">
  <Symbol(react.fragment) />
</header>"
`;

exports[`Header component render mobile version 1`] = `
"<header className=\\"header isMobile\\">
  <Symbol(react.fragment)>
    <div className=\\"logo\\" onClick={[undefined]} />
  </Symbol(react.fragment)>
</header>"
`;

exports[`Header component render with children 1`] = `
"<header className=\\"header\\">
  <div>
    teste com filho
  </div>
</header>"
`;
